WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311706
MutationObserver delivers childList records in wrong order when script runs during insertion
https://bugs.webkit.org/show_bug.cgi?id=311706
Summary
MutationObserver delivers childList records in wrong order when script runs d...
Chris Dumez
Reported
2026-04-07 22:38:53 PDT
MutationObserver delivers childList records in wrong order when script runs during insertion.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-07 22:40:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62250
Ahmad Saleem
Comment 2
2026-04-07 22:42:25 PDT
***
Bug 245448
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2026-04-08 18:23:01 PDT
Committed
310812@main
(e0d1ff8f5bf3): <
https://commits.webkit.org/310812@main
> Reviewed commits have been landed. Closing PR #62250 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2026-04-08 18:24:12 PDT
<
rdar://problem/174368989
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug