MutationObserver delivers childList records in wrong order when script runs during insertion https://bugs.webkit.org/show_bug.cgi?id=311706

Reviewed by Ryosuke Niwa.

Mutation records for child insertions were being enqueued after any scripts
triggered by the insertion (e.g. via postConnectionSteps), because the caller's
ChildListMutationScope kept the accumulator alive across script execution.

Fix by moving the ChildListMutationScope into executeNodeInsertionWithScriptAssertion,
scoped to end after childrenChanged but before postConnectionSteps / dispatchChildInsertionEvents,
and removing the outer scopes from pure-insertion callers (appendChild, insertBefore, append,
prepend, insertChildrenBefore).

The scope must cover childrenChanged because HTMLSelectElement::childrenChanged triggers
selectOption → updateSelectedContent, which enqueues mutation records for <selectedcontent>.
Those records need to be enqueued before the parent's child insertion record (since they are
a side-effect of the insertion). If the scope ended before childrenChanged, the parent's
record would be flushed first, reversing the expected order.

No new tests, covered by existing WPT tests that were rebaselined. These tests
were already passing in Chrome and Firefox so this aligns our behavior with
them.

* LayoutTests/imported/w3c/web-platform-tests/dom/nodes/MutationObserver-document-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/the-select-element/customizable-select/selectedcontent-mutations-expected.txt:
* Source/WebCore/dom/ContainerNode.cpp:
(WebCore::executeNodeInsertionWithScriptAssertion):
(WebCore::ContainerNode::insertBefore):
(WebCore::ContainerNode::appendChildWithoutPreInsertionValidityCheck):
(WebCore::ContainerNode::insertChildrenBeforeWithoutPreInsertionValidityCheck):
(WebCore::ContainerNode::append):
(WebCore::ContainerNode::prepend):

Canonical link: https://commits.webkit.org/310812@main