Source/WebCore/dom/ContainerNode.cpp
@@ -399,23 +399,26 @@ static ALWAYS_INLINE void executeNodeInsertionWithScriptAssertion(ContainerNode&
 
     NodeVector postInsertionNotificationTargets;
     {
-        WidgetHierarchyUpdatesSuspensionScope suspendWidgetHierarchyUpdates;
-        ScriptDisallowedScope::InMainThread scriptDisallowedScope;
-        Style::ChildChangeInvalidation styleInvalidation(containerNode, childChange);
+        ChildListMutationScope mutation(containerNode);
+        {
+            WidgetHierarchyUpdatesSuspensionScope suspendWidgetHierarchyUpdates;
+            ScriptDisallowedScope::InMainThread scriptDisallowedScope;
+            Style::ChildChangeInvalidation styleInvalidation(containerNode, childChange);
 
-        if (containerNode.isShadowRoot() || containerNode.isInShadowTree()) [[unlikely]]
-            containerNode.containingShadowRoot()->resolveSlotsBeforeNodeInsertionOrRemoval();
+            if (containerNode.isShadowRoot() || containerNode.isInShadowTree()) [[unlikely]]
+                containerNode.containingShadowRoot()->resolveSlotsBeforeNodeInsertionOrRemoval();
 
-        for (auto& child : children) {
-            doNodeInsertion(child);
-            ChildListMutationScope(containerNode).childAdded(child);
-            notifyChildNodeInserted(containerNode, child, postInsertionNotificationTargets);
+            for (auto& child : children) {
+                doNodeInsertion(child);
+                mutation.childAdded(child);
+                notifyChildNodeInserted(containerNode, child, postInsertionNotificationTargets);
+            }
         }
-    }
-    ASSERT(postInsertionNotificationTargets.isEmpty() || children[0]->isConnected());
+        ASSERT(postInsertionNotificationTargets.isEmpty() || children[0]->isConnected());
 
-    // FIXME: Move childrenChanged into ScriptDisallowedScope block.
-    containerNode.childrenChanged(childChange);
+        // FIXME: Move childrenChanged into ScriptDisallowedScope block.
+        containerNode.childrenChanged(childChange);
+    }
 
     ASSERT(ScriptDisallowedScope::InMainThread::isEventDispatchAllowedInSubtree(containerNode));
     for (auto& target : postInsertionNotificationTargets)
@@ -670,7 +673,6 @@ ExceptionOr<void> ContainerNode::insertBefore(Node& newChild, RefPtr<Node>&& ref
 
     InspectorInstrumentation::willInsertDOMNode(protect(document()), *this);
 
-    ChildListMutationScope mutation(*this);
     executeNodeInsertionWithScriptAssertion(*this, targets, next.ptr(), ChildChange::Source::API, ReplacedAllChildren::No, [&](Node& child) {
         child.setTreeScopeRecursively(treeScope());
         insertBeforeCommon(next, child);
@@ -1004,7 +1006,6 @@ ExceptionOr<void> ContainerNode::appendChildWithoutPreInsertionValidityCheck(Nod
 
     InspectorInstrumentation::willInsertDOMNode(protect(document()), *this);
 
-    ChildListMutationScope mutation(*this);
     executeNodeInsertionWithScriptAssertion(*this, targets, nullptr, ChildChange::Source::API, ReplacedAllChildren::No, [&](Node& child) {
         child.setTreeScopeRecursively(treeScope());
         appendChildCommon(child);
@@ -1045,7 +1046,6 @@ ExceptionOr<void> ContainerNode::insertChildrenBeforeWithoutPreInsertionValidity
 
     InspectorInstrumentation::willInsertDOMNode(protect(document()), *this);
 
-    ChildListMutationScope mutation(*this);
     executeNodeInsertionWithScriptAssertion(*this, newChildren, refChild.get(), ChildChange::Source::API, ReplacedAllChildren::No, [&](auto& child) {
         child->setTreeScopeRecursively(treeScope());
         if (refChild)
@@ -1357,7 +1357,6 @@ ExceptionOr<void> ContainerNode::append(FixedVector<NodeOrString>&& vector)
         return checkResult;
 
     Ref protectedThis { *this };
-    ChildListMutationScope mutation(*this);
     if (auto appendResult = insertChildrenBeforeWithoutPreInsertionValidityCheck(WTF::move(newChildren)); appendResult.hasException())
         return appendResult;
 
@@ -1379,7 +1378,6 @@ ExceptionOr<void> ContainerNode::prepend(FixedVector<NodeOrString>&& vector)
         return checkResult;
 
     Ref protectedThis { *this };
-    ChildListMutationScope mutation(*this);
     if (auto appendResult = insertChildrenBeforeWithoutPreInsertionValidityCheck(WTF::move(newChildren), nextChild.get()); appendResult.hasException())
         return appendResult;
 
